# shannon-phd

./: .gitignore  00-design.md  02-target-venues.md  03-paper-strategy.md  04-mock-vs-real.md  05-lab-isolation.md  06-research-questions.md  07-ablation-and-edge-cases.md  08-preregistration.md  Dockerfile  LICENSE-CODE  LICENSE-DATA  Makefile  README.md  conftest.py  paper.tex  pyproject.toml
agent/: runner.py
agent/agents/: base.py
agent/core/: budget.py  memory.py  orchestrator.py
agent/defenses/: dual_judge.py  hardened_prompt.py  sanitizer.py
agent/llm/: anthropic_client.py  bedrock_client.py  bedrock_converse_client.py  interface.py
agent/prompts/: analyst.md  analyst_naive.md  exploit.md  recon.md  validator.md
analysis/: ablation_summary.py  classifier.py  full_round_analysis.py  hero_figures.py  plots.py  robustness.py  stats.py  system_diagram.py
data/: README.md  fetch.py  sources.json
experiments/: run_experiment.py  run_matrix.py
figures/: system_diagram.tex
lab/: README.md  docker-compose.yml
models/: catalog.json  cost.py  registry.py
payloads/: injector.py  taxonomy.py
results/: all-runs.jsonl  juiceshop-secondary.jsonl  preregistration-hash.txt  replication-temp0.jsonl  results-table.md  robustness-summary.json  rq-close-gaps.jsonl  rq-full-round-meta.json  rq-full-round.jsonl  rq-publication-final.jsonl  rq-remaining.jsonl  rq1-combined.jsonl  rq1-scaled-summary.json  rq1-scaled.jsonl  rq1-stats-final.json  rq1-stats.json  rq2-channel-stats.json  rq3-ablation-edge.jsonl  rq3-ablation-summary.json  rq4-spearman.json  smoke.jsonl
(+54 files in other folders)
