[project]
name = "shannon-phd-paper"
version = "0.1.0"
description = "Lab + analysis code for the PhD paper on autonomous AI pentester reliability and adversarial robustness."
authors = [{ name = "Lorenzo De Tomasi", email = "lorenzo.detomasi@graduate.univaq.it" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "anthropic>=0.40",
    "httpx>=0.27",
    "boto3>=1.34",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
browser = ["playwright>=1.45"]
openai = ["openai>=1.50"]

[tool.pytest.ini_options]
testpaths = ["lab/shannon_runner/tests", "lab/egress_trap/tests", "lab/integration", "lab/synthetic_target/tests", "payloads/tests", "data/tests", "models/tests", "analysis/tests", "agent/tests", "agent/defenses/tests", "experiments/tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["lab*", "payloads*", "data*", "models*", "analysis*", "agent*"]
